# utils

./: README.md
QCLInfo/: QOpenCLInfo.pro  main.cpp  qclinfo.cpp  qclinfo.h
QtAction/: QtAction.pro  share.pri
QtAction/QmlAction/: QmlAction.pro  actions.qml  main.cpp  main.qml
QtAction/share/: aobject.cpp  aobject.h  share.h
QtCreatorCMake/: CMakeLists.txt  CMakeLists.txt.user.15feace  README.MD  main.qml
QtOpenCV/: QtOpenCV.pro  android.pri  cvwidget.cpp  cvwidget.h  main.cpp  opencv.pri  res.qrc
QtOpenCV/android/: .gitignore  AndroidManifest.xml
QtOpenCV/res/: .gitignore
QtOpenGLES30stub/: QtOpenGLES30stub.pro  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
QtOpenGLES30stub/res/: main.fsh  main.vsh
QtOpenGLES31compute/: QtOpenGLES31ComputeStub.pro  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
QtOpenGLES31compute/res/: main.fsh  main.gsh
QtQmlSensors/: main.qml
ocvCompareResults/: main.cpp  ocvCompareResults.pro  yaparsefiles.cpp  yaparsefiles.h
ocvMakeTestBatch/: getTestNames.sh  getTestScripts.sh  main.cpp
